exports[`simple todo app functions correctly 1`] = `
"<body>
    <div id=\"app\">
      <form>
        <input type=\"text\" value=\"\">
        <button name=\"new-todo\">Add</button>
      </form>
      
    </div>

    <template id=\"new-todo\">
      <form>
        <input type=\"text\" value=\"\${todo}\">
        <button @click=\"add\" name=\"new-todo\">Add</button>
      </form>
    </template>

    <template id=\"todo\">
      <div>
        \${id} - \${todo}
        <button @click=\"remove\" name=\"remove-todo\"></button>
      </div>
    </template>
  </body>"
`;

exports[`simple todo app functions correctly 2`] = `
"<body>
    <div id=\"app\">
      <form>
        <input type=\"text\" value=\"\">
        <button name=\"new-todo\">Add</button>
      </form>
      <div>
        0 - foo
        <button name=\"remove-todo\"></button>
      </div>
    </div>

    <template id=\"new-todo\">
      <form>
        <input type=\"text\" value=\"\${todo}\">
        <button @click=\"add\" name=\"new-todo\">Add</button>
      </form>
    </template>

    <template id=\"todo\">
      <div>
        \${id} - \${todo}
        <button @click=\"remove\" name=\"remove-todo\"></button>
      </div>
    </template>
  </body>"
`;

exports[`simple todo app functions correctly 3`] = `
"<body>
    <div id=\"app\">
      <form>
        <input type=\"text\" value=\"\">
        <button name=\"new-todo\">Add</button>
      </form>
      <div>
        0 - foo
        <button name=\"remove-todo\"></button>
      </div><div>
        1 - bar
        <button name=\"remove-todo\"></button>
      </div>
    </div>

    <template id=\"new-todo\">
      <form>
        <input type=\"text\" value=\"\${todo}\">
        <button @click=\"add\" name=\"new-todo\">Add</button>
      </form>
    </template>

    <template id=\"todo\">
      <div>
        \${id} - \${todo}
        <button @click=\"remove\" name=\"remove-todo\"></button>
      </div>
    </template>
  </body>"
`;

exports[`simple todo app functions correctly 4`] = `
"<body>
    <div id="app">
      <form>
        <input type="text" value="">
        <button name="new-todo">Add</button>
      </form>
      <div>
        0 - foo
        <button name="remove-todo"></button>
      </div>
    </div>

    <template id="new-todo">
      <form>
        <input type="text" value="\${todo}">
        <button @click="add" name="new-todo">Add</button>
      </form>
    </template>

    <template id="todo">
      <div>
        \${id} - \${todo}
        <button @click="remove" name="remove-todo"></button>
      </div>
    </template>
  </body>"
`;
